# character-eng

./: .dockerignore  .gitignore  AGENT_MAP.md  AGENT_START.md  BENCHMARK_RUNBOOK.md  CLAUDE.md  CONTROL_SURFACE.md  CURRENT_STATE.md  Dockerfile  Dockerfile.gcp-hotfix  Dockerfile.manager-lite  Dockerfile.runpod-full-hotfix  GREG_CHARACTER_ONE_SHEET.md  HANDOFF.md  LICENSE  QA_TODO.md  QUICKSTART.md  README.md  REMOTE_QUICKSTART.md  VISION_SYSTEM_CHANGES_LOG.md  WATER_STAND_SCENARIO_ONE_SHEET.md  barge-snippets-readme.md  config.example.toml  config.toml  learnings.md  package-lock.json  package.json  pyproject.toml  runpod-work-and-learnings.md  sim_work_to_date.md  test_plan.md  tomorrow-prompt.md  tts_benchmark_results.md  tts_lines.txt
.codex/skills/archive-debug/: SKILL.md
.codex/skills/archive-debug/references/: character-eng.md
.codex/skills/character-eng-dashboard-ux/: SKILL.md
.codex/skills/character-eng-dashboard-ux/agents/: openai.yaml
.codex/skills/sim-eval/: SKILL.md
aec_test/: aec_db_test.py  aec_test.py  aec_vad_test.py  generate_wavs.py  integration_test.py
character_eng/: __main__.py  aec.py  archive_analysis.py  benchmark.py  bridge.py  browser_voice.py  chat.py  chatterbox_tts.py  config.py  creative.py  devices.py  filler_audio.py  gemini_media.py  history.py  kani_tts.py  kitten_tts.py  kokoro_tts.py  livekit_auth.py  livekit_transport.py  livekit_voice.py  local_stack_benchmark.py  local_tts.py  mio_tts.py  models.py  name_memory.py  open_report.py  perception.py  person.py  pocket_runtime.py  pocket_tts.py  prompts.py  qa_barge_in.py  qa_chat.py  qa_full_stack.py  qa_personas.py  qa_roles.py  qa_scaffold.py  qa_toggles.py  qa_vision_snippets.py  qa_voice.py  (+20 more)
character_eng/dashboard/: __init__.py  events.py  index.html  robot_preview.html  server.py  stream_schema.json  stt_debug.html  system_map.html  tts_debug.html
character_eng/dashboard/assets/booster_k1/: default-pose.json
character_eng/dashboard/assets/motions/: booster-wave.json
character_eng/dashboard/static/: robot_preview_app.js
character_eng/vision/: client.py  context.py  focus.py  interpret.py  manager.py  synthesis.py  vlm.py
deploy/: README.md  container_entrypoint.sh  gcp.env.example  gcp.shared-remote.env  livekit.env.example  manager_lite_entrypoint.sh  runpod-lite.toml.example  runpod.py  runpod.toml.example
deploy/gcp/: README.md  create_vm.sh  doctor.sh  offboard_user.sh  onboard_user.sh  startup.sh  vm_ctl.sh
deploy/livekit/: README.md  start_local_dev.sh  stop_local_dev.sh
docs/: archive_debug_playbook.md  archive_debug_postmortem.md  archive_quickstart.md  dashboard_timeline_perf_plan.md  dashboard_ux_workflow.md  guide.md  robot_sim_eval_playbook.md  stt_interrupt_followups.md
experiments/aec/: .gitignore  REPORT.md  aec_poc.py  generate_pocket_wavs.py  live_demo.py  livekit_aec.py
experiments/fast-llm/: DESIGN.md  combined_ab.py  director_ab.py  eval_ab.py  eval_split_ab.py  parallel_bench.py  plan_single_ab.py  reconcile_ab.py  script_check_refine_ab.py
fixtures/offline_archives/greg-offline-canonical-v1/: README.md  events.jsonl  manifest.json
fixtures/offline_archives/greg-offline-canonical-v1/checkpoints/: 0000_session-start.json  0001_beat.json  (+7 more)
prompts/: automation_short_turn.txt  beat_guide.txt  condition_system.txt  continue_listening_system.txt  director_system.txt  eval_system.txt  expression_system.txt  global_rules.txt  next_beat_system.txt  plan_single_system.txt  plan_system.txt  prompt_registry.toml  reconcile_system.txt  robot_action_system.txt  think_system.txt  vision_constant_questions.txt  vision_constant_sam_targets.txt  vision_state_update.txt  vision_synthesis.txt  visual_focus.txt
prompts/characters/greg/: character.txt  character_manifest.toml  goals_dynamic.txt  goals_static.txt  prompt.txt  scenario.txt  scenario_script.toml  scenario_script_full.toml  scenario_script_punchy.toml  world_dynamic.txt  world_static.txt
prompts/characters/gruff_blacksmith/: character.txt  scenario.txt
prompts/characters/mara/: character.txt  character_manifest.toml  scenario.txt  scenario_script.toml  world_dynamic.txt  world_static.txt
prompts/characters/mysterious_oracle/: character.txt  prompt.txt  scenario.txt
prompts/qa/: automation_short_turn.txt
qwen-ref/: ref.txt
scripts/: archive_debug.py  archive_debug.sh  camera_uplink.py  debug_archive_naming.py  history_prune.sh  history_usage.sh  install_offline_archive_fixture.py  install_repo_skills.sh  livekit_issue_token.py  new_character.sh  robot_sim_eval.sh  run_heavy.sh  run_hot.sh  run_hot_offline.sh  run_hot_remote.sh  run_hot_remote_webrtc.sh  run_hot_webrtc.sh  run_live.sh  run_local.sh  run_robot_sim_eval.py  stop_hot_remote.sh  stop_hot_remote_webrtc.sh  stop_hot_webrtc.sh  stop_live.sh  stop_local.sh  vision_smoke.sh
services/vision/: README.md  app.py  face_tracker.py  mock_server.py  patch_vllm.py  person_tracker.py  pyproject.toml  start.sh
services/vision/replays/: carnival.json  walkup.json
tests/: test_archive_analysis.py  test_bridge.py  test_chat.py  test_chatterbox_tts.py  test_config.py  test_dashboard.py  test_dashboard_playwright.py  test_e2e.py  test_filler_audio.py  test_history.py  test_hot_remote_scripts.py  test_kani_tts.py  test_livekit_auth.py  test_local_stack_benchmark.py  test_local_tts.py  test_mio_tts.py  test_name_memory.py  test_perception.py  test_person.py  test_person_tracker_native_sam3.py  test_pocket_runtime.py  test_pocket_tts.py  test_prompt_hot_reload.py  test_prompts.py  test_qa_barge_in.py  test_qa_full_stack.py  test_qa_full_stack_playwright.py  test_qa_vision_snippets.py  test_robot_preview.py  test_robot_sim.py  test_runpod_deploy.py  test_runtime_controls.py  test_runtime_robot_actions.py  test_runtime_world_sync.py  test_rust_eyes_bridge.py  test_scenario.py  test_serve.py  test_session_manager.py  test_session_manager_playwright.py  test_session_manager_real_runtime.py  (+6 more)
tests/vision_snippets/: README.md
(+10 files in other folders)
