[project]
name = "character-eng"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.86.0",
    "python-dotenv>=1.2.1",
    "rich>=14.3.2",
    "deepgram-sdk>=5.3",
    "sounddevice>=0.5",
    "numpy>=1.26",
    "websocket-client>=1.7",
    "pocket-tts>=1.0",
    "livekit>=1.1.2",
]

[project.optional-dependencies]
local-tts = [
    "torch>=2.8,<2.9",
    "torchaudio",
    "transformers==4.57.3",
    "accelerate>=1.12.0",
    "librosa",
    "soundfile",
    "einops",
    "onnxruntime",
    "flash-attn==2.8.3",
]

[project.scripts]
chat = "character_eng.__main__:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
