[project]
name = "character-eng-vision"
version = "0.1.0"
description = "Vision service for character-eng (SAM3, InsightFace, ReID, VLM)"
requires-python = ">=3.11"
dependencies = [
    "flask",
    "torch>=2.9,<2.10",
    "transformers>=4.56,<5",
    "vllm==0.16.0",
    "accelerate",
    "opencv-python>=4.10",
    "pillow>=10.0",
    "sam3 @ git+https://github.com/facebookresearch/sam3.git",
    "torchvision",
    "setuptools<81",
    "decord",
    "pycocotools",
    "num2words",
    "einops",
    "openai",
    "insightface>=0.7",
    "cjm-byte-track>=0.0.6",
    "onnxruntime-gpu",
    "pydantic>=2.0",
    "torchreid>=0.2.5",

    "gdown>=5.2.1",
    "tensorboard>=2.20.0",
    "ml-dtypes>=0.5.0",
]

[project.optional-dependencies]
jetson = [
    "flask",
    "transformers>=4.56,<5",
    "vllm==0.16.0",
    "accelerate",
    "opencv-python>=4.10",
    "pillow>=10.0",
    "sam3 @ git+https://github.com/facebookresearch/sam3.git",
    "setuptools<81",
    "decord",
    "pycocotools",
    "num2words",
    "einops",
    "openai",
    "insightface>=0.7",
    "cjm-byte-track>=0.0.6",
    "pydantic>=2.0",
    "torchreid>=0.2.5",
    "gdown>=5.2.1",
    "tensorboard>=2.20.0",
    "ml-dtypes>=0.5.0",
]

[tool.uv]
index-strategy = "unsafe-best-match"
# sam3 has an overly strict numpy pin; keep the resolver on numpy 2.x.
override-dependencies = [
    "numpy>=2.1",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
